maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:9: error: not found: value NORTH
  while(!estSurBiscuit() && getDirection() == NORTH){
                                              ^