maze.island.IslandMaze.scala.code
override def run() {
  while(!estSurBiscuit()){
    while (!estFaceMur){
      avance()
    }
    gauche()
    }
  while(!estSurBiscuit() && getDirection() == NORTH){
    keepHandOnWallSide()
  }
}



def keepHandOnWallSide(){
  gauche();
  if (estFaceMur()){
    while(estFaceMur()){
    droite();
  }
    avance()
  }
  else{
    avance()
  }}